--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "keen-slider": "^6.8.5"
+    "keen-slider": "^6.8.5",
+    "vue-highlightjs": "^1.3.3"
   }
 }
