--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,14 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json"
+  "extends": "./.nuxt/tsconfig.json",
+  "compilerOptions": {
+    "typeRoots": [
+      "node_modules/@types",
+      "src/types"
+    ],
+    "include": [
+      "src",
+      "src/declaration.d.ts"
+    ]
+  }
 }
