--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/eslint-module": "^4.0.2",
     "@nuxtjs/i18n": "^8.0.0-beta.10",
+    "@types/three": "^0.152.1",
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
@@ -30,6 +31,7 @@
   "dependencies": {
     "keen-slider": "^6.8.5",
     "nuxt-swiper": "^1.1.0",
+    "three": "^0.153.0",
     "vue-highlightjs": "^1.3.3"
   }
 }
